# ChangeLog for virtual/xmwce
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xmwce-0_p20141124 (24 Nov 2014)

  24 Nov 2014; Michael Weber <xmw@gentoo.org> +xmwce-0_p20141124.ebuild,
  -xmwce-0_p20130727.ebuild:
  Drop zsh-completion

*xmwce-0_p20130727 (27 Jul 2013)

  27 Jul 2013; Michael Weber <xmw@gentoo.org> +xmwce-0_p20130727.ebuild,
  -xmwce-0_p20121031.ebuild:
  version bump

  31 Oct 2012; Michael Weber <xmw@gentoo.org> -xmwce-0_p20120510.ebuild:
  Drop old

*xmwce-0_p20121031 (31 Oct 2012)

  31 Oct 2012; Michael Weber <xmw@gentoo.org> +xmwce-0_p20121031.ebuild:
  Tools suggested by lorem_ipsum, happy halloween.

*xmwce-0_p20120510 (10 May 2012)

  10 May 2012; Michael Weber <xmw@gentoo.org> -xmwce-0_p20120218.ebuild,
  -xmwce-0_p20120505.ebuild, +xmwce-0_p20120510.ebuild:
  Version bump: mosh

*xmwce-0_p20120505 (05 May 2012)

  05 May 2012; Michael Weber <xmw@gentoo.org> +xmwce-0_p20120505.ebuild:
  Version bump

*xmwce-0_p20120218 (18 Feb 2012)

  18 Feb 2012; Michael Weber <xmw@gentoo.org> -xmwce-0_p20120214.ebuild,
  +xmwce-0_p20120218.ebuild:
  Add app-misc/when.

  14 Feb 2012; Michael Weber <xmw@gentoo.org> xmwce-0_p20120214.ebuild:
  Add app-vim/gnupg

*xmwce-0_p20120214 (14 Feb 2012)

  14 Feb 2012; Michael Weber <xmw@gentoo.org> +xmwce-0_p20120214.ebuild,
  +metadata.xml:
  Initial import