@@ -1,15 +1,15 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 
 DESCRIPTION="Michael Weber (xmw) console environment"
 SRC_URI=""
 
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="+dev minimal"
+IUSE="+dev"
 
 RDEPEND="
 	app-admin/makepasswd
@@ -57,9 +57,5 @@ RDEPEND="
 	dev? (
 		app-portage/gentoolkit
 		app-portage/gentoolkit-dev
-	)
-	!minimal? (
-		app-misc/ompload
-	)
-	"
+	)"
 DEPEND=""
