@@ -1,6 +1,12 @@
 # ChangeLog for virtual/xmwce
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*xmwce-0_p20150731 (31 Jul 2015)
+
+  31 Jul 2015; Michael Weber <xmw@gentoo.org> +xmwce-0_p20150731.ebuild,
+  -xmwce-0_p20141124.ebuild:
+  Version bump, drop USE=minimal and ompload
 
 *xmwce-0_p20141124 (24 Nov 2014)
 
